--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1>Join My Group</h1><br>
+  
+    <p>Lorem ipsum dolor sit amet, consectetur </p><br>
+
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
   </body>
 </html>
