--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="container">
     <h1>Join My Group</h1><br>
   
-    <p>Lorem ipsum dolor sit amet, consectetur </p><br>
+    <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Auctor viverra eget sit sapiem,velit scelerisque volutpat vitae.</p><br>
 
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
+    <p><strong>All of Silver benefits</strong></p>
+    <p><strong>Free access to our events</strong></p>
+    <p><strong>Access to all resources</strong></p>
+    <p><strong>Exclusive stcickers and merch</strong></p>
+    </div>
   </body>
 </html>
