--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   </head>
   <body>
     <div class="container">
     <h1>Join My Group</h1><br>
   
-    <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Auctor viverra eget sit sapiem,velit scelerisque volutpat vitae.</p><br>
+    <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit.Auctor viverra eget sit sapien,<br>velit scelerisque volutpat vitae.</p><br>
 
-    <p><strong>All of Silver benefits</strong></p>
-    <p><strong>Free access to our events</strong></p>
-    <p><strong>Access to all resources</strong></p>
-    <p><strong>Exclusive stcickers and merch</strong></p>
+    <p><i class="fas fa-star" id="star"></i><strong>All of Silver benefits</strong></p><br>
+    <p><i class="fas fa-star" id="star"></i><strong>Free access to our events</strong></p><br>
+    <p><i class="fas fa-star" id="star"></i><strong>Access to all resources</strong></p><br>
+    <p><i class="fas fa-star" id="star"></i><strong>Exclusive stcickers and merch</strong></p>
+    <br>
     </div>
   </body>
 </html>
+
+
