--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   </head>
   <body>
-    <div class="container">
+  <div class="container">
     <h1>Join My Group</h1><br>
-  
-    <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit.Auctor viverra eget sit sapien,<br>velit scelerisque volutpat vitae.</p><br>
-
-    <p><i class="fas fa-star" id="star"></i><strong>All of Silver benefits</strong></p><br>
+     
+   <div class="line">
+    <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit.Auctor viverra eget sit sapien,<br>velit scelerisque volutpat vitae.</p>
+   </div><br>
+    
+   <div class="lists">
+    <p><i class="fas fa-star" id="star"></i><strong>All of Silver benefits </strong></p><br>
     <p><i class="fas fa-star" id="star"></i><strong>Free access to our events</strong></p><br>
     <p><i class="fas fa-star" id="star"></i><strong>Access to all resources</strong></p><br>
-    <p><i class="fas fa-star" id="star"></i><strong>Exclusive stcickers and merch</strong></p>
-    <br>
-    </div>
+    <p><i class="fas fa-star" id="star"></i><strong>Exclusive stickers and merch</strong></p>
+   </div>
+ </div>
   </body>
 </html>
 
