--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
   </head>
   <body>
   <div class="container">
@@ -18,10 +16,10 @@
    </div><br>
     
    <div class="lists">
-    <p><i class="fas fa-star" id="star"></i><strong>All of Silver benefits </strong></p><br>
-    <p><i class="fas fa-star" id="star"></i><strong>Free access to our events</strong></p><br>
-    <p><i class="fas fa-star" id="star"></i><strong>Access to all resources</strong></p><br>
-    <p><i class="fas fa-star" id="star"></i><strong>Exclusive stickers and merch</strong></p>
+    <p><i class="fa-sharp fa-regular fa-star" id="star"></i><strong>All of Silver benefits </strong></p><br>
+    <p><i class="fa-sharp fa-regular fa-star" id="star"></i><strong>Free access to our events</strong></p><br>
+    <p><i class="fa-sharp fa-regular fa-star" id="star"></i><strong>Access to all resources</strong></p><br>
+    <p><i class="fa-sharp fa-regular fa-star" id="star"></i><strong>Exclusive stickers and merch</strong></p>
    </div>
  </div>
   </body>
